--- a/app/views/interpreters/index.html.erb
+++ b/app/views/interpreters/index.html.erb
@@ -13,37 +13,48 @@
                 <p class="mt-2 text-sm text-gray-700">A list of all the interpreters in your account.</p>
               </div>
               <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
-                <button type="button" class="inline-flex items-center justify-center rounded-md border border-transparent bg-tokanisecondary-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2 sm:w-auto">Add Interpreter</button>
+                <%= link_to "Add Interpreter", new_interpreter_path, class: "inline-flex items-center justify-center rounded-md border border-transparent bg-tokanisecondary-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2 sm:w-auto" %>
               </div>
+             
             </div>
             <div class="-mx-4 mt-8 overflow-hidden shadow ring-1 ring-black ring-opacity-5 sm:-mx-6 md:mx-0 md:rounded-lg">
               <table class="min-w-full divide-y divide-gray-300">
                 <thead class="bg-gray-50">
                   <tr>
-                    <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6">Name</th>
-                    <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900">Phone</th>
-                    <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
-                      <span class="sr-only">Edit</span>
-                    </th>
+                    <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6"><%= sortable @interpreters, :name, "Name" %></th>
+                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Email</th>
+                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Phone</th>
+                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Gender</th>
+                    <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900">Interpreter Type</th>
+                    <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900">Edit</th>  
                   </tr>
                 </thead>
                 <tbody class="divide-y divide-gray-200 bg-white">
                 <% @interpreters.each do |interpreter| %>
                   <tr>
                     <td class="w-full max-w-0 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:w-auto sm:max-w-none sm:pl-6">
-                        <%= interpreter.last_name %>,  <%= interpreter.first_name %>
+                      
+                      <%= link_to "#{interpreter.last_name}, #{interpreter.first_name}", interpreter_path(interpreter) %> 
                       <dl class="font-normal lg:hidden">
                         <dt class="sr-only">Email</dt>
                         <dd class="mt-1 truncate text-gray-700"><%= interpreter.email %></dd>
+                        <dt class="sr-only">Phone</dt>
+                        <dd class="mt-1 truncate text-gray-700"><%= interpreter.interpreter_detail.primary_phone %></dd>
+                        <dt class="sr-only">Gender</dt>
+                        <dd class="mt-1 truncate text-gray-500"><%= interpreter.interpreter_detail.gender %></dd>
                       </dl>
                     </td>
                     <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= interpreter.email %></td>
-                    <td class="py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-                      <a href="#" class="text-tokanisecondary-600 hover:text-tokanisecondary-900">Edit<span class="sr-only">, <%= interpreter.last_name %></span></a>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= interpreter.interpreter_detail.primary_phone %></td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= interpreter.interpreter_detail.gender.titleize %></td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= interpreter.interpreter_detail.interpreter_type.titleize %></td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 sm:table-cell">
+                      <a href="<%= edit_interpreter_path(interpreter) %>" class="text-tokanisecondary-600 hover:text-tokanisecondary-900">Edit<span class="sr-only">, <%= interpreter.id %></span></a>
                     </td>
+                   
                   </tr>
                 <% end %>
-                  <!-- More people... -->
+                  
                 </tbody>
               </table>
             </div>
