--- a/app/views/recipients/_form.html.erb
+++ b/app/views/recipients/_form.html.erb
@@ -1,6 +1,6 @@
 <div>
-  <% form_url = provider.new_record? ? providers_path : provider_path(provider) %>
-  <%= form_with(model: provider, url: form_url) do |form| %>
+  <% form_url = recipient.new_record? ? recipients_path : recipient_path(recipient) %>
+  <%= form_with(model: recipient, url: form_url) do |form| %>
       <div class="mt-5 md:col-span-2 md:mt-0">
         <div class="overflow-hidden shadow sm:rounded-md">
           <div class="bg-white px-4 py-5 sm:p-6">
@@ -18,8 +18,16 @@
                 <%= form.text_field :email, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
               </div>
               <div class="col-span-6 sm:col-span-3">
+                <%= form.label :srn, class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :srn, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+              </div>
+              <div class="col-span-6 sm:col-span-3">
                 <%= form.label :primary_phone, class: "block text-sm font-medium text-gray-700" %>
                 <%= form.text_field :primary_phone, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+              </div>
+              <div class="col-span-6 sm:col-span-3">
+                <%= form.label :mobile_phone, class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :mobile_phone, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
               </div>
 
               <div class="col-span-6 sm:col-span-3 mt-4">
@@ -29,7 +37,7 @@
                   </div>
                   <div class="ml-3 text-sm">
                     <%= form.label :allow_text, class:"font-medium text-gray-700" %>
-                    <p id="allow_text" class="text-gray-500">This provider gets text notifications.</p>
+                    <p id="allow_text" class="text-gray-500">This recipient gets text notifications.</p>
                   </div> 
                 </div>
               </div>
@@ -41,31 +49,17 @@
                   </div>
                   <div class="ml-3 text-sm">
                     <%= form.label :allow_email, class:"font-medium text-gray-700" %>
-                    <p id="allow_email" class="text-gray-500">This provider gets email notifications.</p>
+                    <p id="allow_email" class="text-gray-500">This recipient gets email notifications.</p>
                   </div> 
                 </div>
               </div>
 
-            <div class="col-span-6 sm:col-span-6" data-controller="select-group">
-              <div class="col-span-3 sm:col-span-3">
+              <div class="col-span-3 sm:col-span-6">
                 <div class="form-group">
                   <%= form.label "Customer", class: "block text-sm font-medium text-gray-700" %>
-                  <%= form.select :customer_id,  options_from_collection_for_select(account_customers, :id, :name, provider.customer_id ), {prompt: "Select A Customer First..."}, {class: 'form-control',  data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: select_list_sites_path, select_group_select_key_param: 'customer_id', select_group_select_update_target_param: 'provider_site_id', select_group_select_clear_target_param: 'provider_department_id' }} %> 
+                  <%= form.select :customer_id,  options_from_collection_for_select(account_customers, :id, :name, recipient.customer_id ), {prompt: "Select A Customer..."}, {class: 'form-control',  data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: select_list_sites_path, select_group_select_key_param: 'customer_id', select_group_select_update_target_param: 'provider_site_id', select_group_select_clear_target_param: 'provider_department_id' }} %> 
                 </div>
               </div>
-              <div class="col-span-3 sm:col-span-3">
-                <div class="form-group">
-                  <%= form.label :site_id, class: 'text-blueCoral' %>
-                  <%= form.select :site_id, options_from_collection_for_select(sites, :id, :name, provider.site_id), {include_blank: 'None'}, {disabled: @field_disabled, class: 'form-control', data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: department_select_list_sites_path, select_group_select_key_param: 'site_id', select_group_select_update_target_param: 'provider_department_id'}} %>
-                </div>
-             </div>
-              <div class="col-span-3 sm:col-span-3">
-                <div class="form-group">
-                  <%= form.label :department_id, class: 'text-blueCoral' %>
-                  <%= form.select :department_id, options_from_collection_for_select(departments, :id, :name, provider.department_id), {include_blank: 'None'}, {disabled: @field_disabled, class: 'form-select'} %>
-                </div>
-              </div>
-            </div>
             </div>
           </div>
           <br>
@@ -73,9 +67,9 @@
           <div class="bg-gray-50 px-4 py-3 text-right sm:px-6">
               <%= form.button button_text(form.send(:submit_default_value)), class:"inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
               <% if form.object.new_record? %>
-                  <%= link_to t("cancel"), providers_path, class:"inline-flex justify-center rounded-md border border-transparent bg-tokaniprimary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
+                  <%= link_to t("cancel"), recipients_path, class:"inline-flex justify-center rounded-md border border-transparent bg-tokaniprimary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
               <% else %>
-                  <%= link_to t("cancel"), provider_path(@provider), class:"inline-flex justify-center rounded-md border border-transparent bg-tokaniprimary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
+                  <%= link_to t("cancel"), recipient_path(@recipient), class:"inline-flex justify-center rounded-md border border-transparent bg-tokaniprimary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
               <% end %>
           </div>
         </div> 
@@ -83,5 +77,4 @@
   </div>
 <% end %>
 </div>
-
 
